syntax = "proto3";


package NetLevel;


message ChunkData{
	int64 chunkId = 1;
	bytes data = 2;
}