syntax = "proto3";

package Game;


message LevelObjectAction {
  string ActionName = 2;
}